src/styling/index.css
/* ... */
.name {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.name h1 {
	margin: 0 0 -5vh 0;
	padding: 0;
	text-align: center;
	font-weight: 400;
	letter-spacing: 26.25px;
	font-size: 35vw;
	position: relative;
	z-index: 1;
	color: #ffffff;
}

.header-text {
	display: flex;
	justify-content: space-between;
}
.header-text h2 {
	position: absolute;
}

nav {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	position: relative;
	z-index: 999;
	margin-bottom: 2vh;
}

nav ul {
	display: flex;
	gap: 50px;
}

.scroll_down {
	display: flex;
	justify-content: center;
	margin-bottom: 6vh;
}
.flex {
	display: flex;
	justify-content: space-between;
}

.landing_image {
	width: 42vw;
	margin-top: -13.7vw;
	margin-left: 22vw;
	z-index: 1;
}
a {
	color: #fff;
	text-decoration: none;
}
.icons img {
	width: 100%;

	border-radius: 0.5vw;
}
.landing_image img {
	width: 100%;
	display: block;
}

/* LandingScreen end*/

/* ProjectsText start*/
.projects {
	display: flex;
	flex-wrap: wrap;
	gap: 8vw;
}
.project_text {
	margin: 150px;
	text-align: center;
}
/* ProjectsText end */

/* Projects start */

.margin-bottom {
	margin-bottom: 20rem;
}
.container {
	overflow: hidden;
	width: 100%;
	margin-top: -62vh;
}
.marquee {
	display: inline-block;
	white-space: nowrap;
}
.marquee span {
	display: inline-block;
	padding-right: 4vw;
	font-size: 15vw;
}
.scroll-left .marquee {
	display: flex;
	animation: scroll-left 20s linear infinite;
}
.scroll-right .marquee {
	display: flex;
	animation: scroll-right 40s linear infinite;
}
@keyframes scroll-right {
	0% {
		transform: translateX(-150%);
	}
	100% {
		transform: translateX(-50%);
	}
}
@keyframes scroll-left {
	0% {
		transform: translateX(0%);
	}
	100% {
		transform: translateX(-50%);
	}
}
/* Projects end */

/* ProjectCard start */

.rectangle {
	width: 40vw;
	height: 48vh;
	background-color: #ffffff;
	margin-top: 15vh;
	border-radius: 10px;
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
	transition: transform 0.3s;
	position: relative;
	z-index: 1;
}
.rectangle2 img {
	width: 100%;
	height: 38vh;
	object-fit: cover;
	border-radius: 10px 10px 0px 0px;
	transition: transform 0.3s;
	position: relative;
}

.rectangle h3 {
	color: #000;
	padding: 1.5vh 0px 0px 1vw;
}

.rectangle h4 {
	font-family: sans-serif;
	font-size: 0.9vw;
	color: #747474;
	padding: 0.2vw 0 0 1vw;
}
.about h1 {
	overflow: hidden;
}

.absolute {
	position: relative;
}
.rectangles {
	display: flex;
	position: relative;
	z-index: 1;
	gap: 5vw;
}
.rectangle-content {
	display: flex;
	gap: 16vw;
}
.rectangle-content h3 {
	font-size: 1.4vw;
	color: white;
	border-radius: 0.3vw;
	background: #5296c9;
	padding: 0.4vw;
}

.view-project {
	margin-top: -2.8vh;
	position: relative;
	z-index: 10000000000000;
}

img {
	border-radius: 0.8vw;
}
.modal-content img {
	width: 100%;
}
/* ProjectCard end */

/* AboutMeSection start */
.about-container {
	margin-top: 15vh;
	display: flex;
	gap: 15.5vw;
	margin-bottom: 18vh;
}

.about-content p {
	text-align: left;
	width: 30vw;
}

.about-content h1 {
	margin-bottom: 3vh;
}

.rectangle3 {
	width: 45vw;
	border-radius: 0.5vw;
	background-color: #5296c9;
}
/* AboutMeSection end */

/* AboutMeSection2 start */
.about-content2 {
	margin-bottom: 10vh;
}
.about-content2 p {
	color: #000;
	font-size: 2vw;
}

.rectangles2 {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 1vw;
}
.rectangle4 {
	width: 12vw;
	margin-bottom: 3vh;
	border-radius: 0.5vw;
}
/* AboutMeSection2 end */

/* Foolish Minds */
.foolish {
	display: flex;
	justify-content: center;
	align-items: center;
}
.foolish img {
	max-width: 45vw;
	border-radius: 0.5vw;
	margin-top: 20vh;
	margin-bottom: -7vh;
	object-fit: cover;
}

.foolish_text {
	margin: 150px;
	text-align: center;
}
.button {
	margin-top: 2.5vh;
	display: inline-block;
	padding: 0.5vw;
	border-radius: 0.3vw;
	color: white;
	background: #5296c9;
	text-decoration: none;
	font-size: 1.4vw;
}

/*Contact start*/

.contact_form {
	max-width: 700px;
	margin: 40px auto;
	padding: 20px;
	border-radius: 10px;
}
.contact_text p {
	color: #ffffff;
	margin-top: 3vh;
	margin-bottom: -8vh;
}
.contact_text h1 {
	padding: 150px 0 0 0;
	color: #ffffff;
}

.contact_form input,
.contact_form textarea {
	width: 100%;
	padding: 20px 0px;
	margin-bottom: 15px;
	border: 1px solid #fff;
	border-radius: 6px;
	font-size: 14px;
}

button {
	font-family: "Bebas Neue", sans-serif;
	padding: 0.1vw 1vw;
	border-radius: 0.3vw;
	color: white;
	background: #437da8;
	border: none;
	text-decoration: none;
	font-size: 1.4vw;
	margin: 0px auto;
	cursor: pointer;
}
button :hover {
	background: #ffffff;
}

.contact {
	height: 115vh;
}
/*Contact end*/

/* Arrow up start */
.arrowUp {
	position: fixed;
	bottom: 4vh;
	left: 1vw;
	background: #437da8;
	padding: 1.1vh 0vw;
	border-radius: 10vw;
	cursor: pointer;
	z-index: 1;
	transition: background-color 0.3s;
}

.modal {
	position: fixed;
	z-index: 99999999999999999;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgba(0, 0, 0, 0.4);
	backdrop-filter: blur(20px);
	-webkit-backdrop-filter: blur(20px); /* Safari support */
}
.modal-content {
	backface-visibility: hidden;
	margin-top: 10vh;
	background-color: #f2f5f8;
	border-radius: 1vw;
	width: 100%;
	max-width: 45vw;
	margin-left: auto;
	margin-right: auto;
	padding: 4vw;
	position: relative;
	margin-bottom: 10vh;
}

.modal-content h1 {
	text-align: left;
	font-size: 7vw;
}
.modal-content h4 {
	font-family: sans-serif;
	font-size: 0.9vw;
	margin-left: -1vw;
	color: #747474;
	margin-bottom: 2vh;
}
.modal_close-icon {
	position: absolute;
	top: 1.5vh;
	right: 1.5vh;
	font-weight: bold;
	color: #ffffff;
	cursor: pointer;
	transition: color 0.3s;
	background: #437da8;
	padding: 0.7vw 0.7vw;
	border-radius: 0.7vw;
}

.modal-content p {
	text-align: left;
	margin-bottom: -2vh;
}

.modal-content img {
	margin-top: 5vh;
	max-height: 40vh;
	object-fit: cover;
}
/* ... */

